src/objects/NCP_Authorised_Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Company__c</fullName>
        <formula>IF(ISBLANK(NCP_Service_Contract__r.Account.Name),NCP_Contract_Line_Item__r.ServiceContract.Account.Name,NCP_Service_Contract__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract&apos;s Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCP_Contract_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Contract_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCP_Entitlement_Type__c</fullName>
        <formula>IF(ISBLANK(NCP_Account__c), &apos;Individual User&apos;, &apos;All&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_External_Status__c</fullName>
        <label>External Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Product__c</fullName>
        <formula>NCP_Contract_Line_Item__r.PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>You can only add authorized entitlements for CARES contracts</errorMessage>
            <filterItems>
                <field>ServiceContract.NCP_Contract_Type__c</field>
                <operation>equals</operation>
                <value>CARES</value>
            </filterItems>
            <filterItems>
                <field>ServiceContract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Service Contract</value>
            </filterItems>
            <filterItems>
                <field>ServiceContract.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Parent Service Contract</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Authorized Entitlements</relationshipLabel>
        <relationshipName>Service_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized Entitlement</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Authorised Entitlement  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Entitlements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>NCP_Custom_Authorised_Entitlement_Share__c</fullName>
        <label>NCP Custom Authorised Entitlement Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Contact_or_Account_filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISBLANK( NCP_Account__c ), !ISBLANK( NCP_Contact__c ))</errorConditionFormula>
        <errorMessage>Please specify either a Contact - Service Contract or Account - Service Contract relationship but not both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Account_Contact_Change</fullName>
        <active>true</active>
        <description>Restrict account/contact changes after Authorised entitlement is created</description>
        <errorConditionFormula>OR
(
 ISCHANGED( NCP_Account__c ),
 ISCHANGED( NCP_Contact__c ) 
)</errorConditionFormula>
        <errorMessage>Please create a new record for assigning new Account/Contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Contract_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(NCP_Service_Contract__c)</errorConditionFormula>
        <errorDisplayField>NCP_Service_Contract__c</errorDisplayField>
        <errorMessage>Please enter the Service Contract or Parent Service Contract</errorMessage>
    </validationRules>
</CustomObject>