src/objects/NCP_Authorised_Entitlement__c/validationRules/Service_Contract_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Contract_Filled</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(NCP_Service_Contract__c)</errorConditionFormula>
    <errorDisplayField>NCP_Service_Contract__c</errorDisplayField>
    <errorMessage>Please enter the Service Contract or Parent Service Contract</errorMessage>
</ValidationRule>